# protein-design-archive

./: .gitignore  README.md  dev-compose.yml  elm-land.json  elm.json  package-lock.json  package.json  prepare_for_production.py  pro-compose.yml  webpack.config.js
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/scripts/: 20250101_pdb_codes.txt  20250201_pdb_codes.txt  20250228_pdb_codes.txt  20250331_pdb_codes.txt  20250501_pdb_codes.txt  20250530_pdb_codes.txt  20250713_pdb_codes.txt  20250901_pdb_codes.txt  20251001_pdb_codes.txt  20251101_pdb_codes.txt  20260202_pdb_codes.txt  20260503_pdb_codes.txt  data_collection.py  init_db.py  pdb_codes.csv  pdb_codes.txt  pdb_codes_new.csv  pdb_codes_new_upper.csv  pdb_codes_oct24.txt  test_data_scraped_merizo.json
backend/src/backend/: __init__.py  app.py  db.py
data/: CHECK_DUPLICATES_IN_rcsb_pdb_custom_report_20240403090055.ipynb  PDB_codes_1013and801andDek.csv  PDB_codes_dfAtoF.csv  abstract_designs.json  data.json  data1013.json  dataset801_no_index.csv  dataset801_original_index.csv  dataset801_reset_index.csv  dataset857_index.csv  dataset857_no_index.csv  datatset1013_index.csv  datatset1013_no_index.csv  datatset1013_weird.csv  datatset1204_index.csv  datatset1204_no_index.csv  designed_chains_rcsb_pdb_custom_report_20240501161422.csv  designs.json  found_in_both.csv  found_in_newer_missing_from_older.csv  found_in_older_missing_from_newer.csv  in_Dek_not_1013.csv  in_Dek_not_1013_no_index.csv  in_Dek_not_1013and801.csv  in_Dek_not_1013and801_no_index.csv  prot-des.json  rcsb_pdb_custom_report_20240220_Luigi_2020-2024.csv  rcsb_pdb_custom_report_20240403090055.csv  rcsb_pdb_custom_report_raw_CSV.csv
db/: docker_command.md
frontend/: .gitignore  Dockerfile  README.md  elm-land.json  elm.json
public/: designs.json  index.html
src/: Data.elm  Decoders.elm  DesignDate.elm  DesignFilter.elm  Effect.elm  Main.elm  Plots.elm  ProteinDesign.elm  RawDesignData.elm  Shared.elm  Style.elm
src/Shared/: Msg.elm  (+1 more)
(+61 files in other folders)
